frostwire (4.21.4) stable; urgency=low

  * New setting to turn off automatic installer downloads.
  * New setting to limit the speed of BitTorrent downloads.
  * New Galician flag added.
  * UX improvements when creating new folders on the Phones and Tablets UI.
  * Fixes bug when dropping files on an Android device that hasn't been 
    selected.
  * UX change. Default save location folder in Windows Vista and Windows7 is
    now the user's default "~Downloads/FrostWire" folder.
  * UX improvements when showing FrostClick overlays. No more flickering.
    Overlays are now shown in an animated slideshow. More than 2 artists
    can now be promoted.
  * Fixes bug when copying .apk files from Android device to desktop computer.
  * Fixes bug when saving torrents to it's default Save location if that
    folder has been deleted.
  * Fixes bug on which removed Torrent downloads would reappear.
  * Updated Mojito DHT integration. Mojito DHT is now active.
  * Upgraded anti-spam mechanisms.
	
 -- FrostWire Team <contact@frostwire.com>  Fri, 21 Jan 2011 20:00:00 -0500

frostwire (4.21.3) stable; urgency=low

  * New "Phones and Tablets" tab. Tools to share files with Android
  devices on a Wi-Fi network.
  * New debian source packages available.
  * Upgrades to HttpFetcher performance. Cleanups and refactors.
  * Upgrades java compatibility to Java 6.
  * Upgrades Mojito-DHT to the latest version found on the LimeWire
  repository. Tune ups.
  * Removed dependencies on Linux native libraries. JDIC is no more
  for Linux releases.
  * Fixes issues when rendering and scrolling torrent search results.
	
 -- FrostWire Team <contact@frostwire.com>  Thu, 16 Dec 2010 20:00:00 -0500

frostwire (4.21.1) stable; urgency=low

  * New auto-update support for Windows and Ubuntu. 
  * Upgrades Azureus Core (bittorrent engine) to version 4.5.0.4.
  Thanks to the Azureus Team for their hard work and support through the
  integration.